Updated default socket connection to use silo

--- a/ElizaChat/ElizaChat/Base.lproj/Main.storyboard
+++ b/ElizaChat/ElizaChat/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="E3J-tx-Qxm">
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="E3J-tx-Qxm">
                                 <rect key="frame" x="535" y="560" width="51" height="31"/>
                                 <connections>
                                     <action selector="setHost:" destination="vXZ-lx-hvc" eventType="valueChanged" id="KIL-h6-Xio"/>
