added live view webpage

--- a/ElizaChat/ElizaChat/Base.lproj/Main.storyboard
+++ b/ElizaChat/ElizaChat/Base.lproj/Main.storyboard
@@ -8,7 +8,6 @@
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="ElizaChat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
@@ -119,8 +118,26 @@
                         <outlet property="usernameInput" destination="lvX-uM-EjT" id="6Y5-wU-2vc"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="274" y="414"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="2u3-r6-kel">
+            <objects>
+                <viewController id="5wA-vo-1Nf" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xA7-wL-Xv9"/>
+                        <viewControllerLayoutGuide type="bottom" id="aQ2-Bq-qbt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Huv-wy-eBf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZbM-Rq-scz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
 </document>
